feat: Complete Project 7 - In-Memory Search Engine with TF-IDF ranking